--- a/HelloAndroid/app/src/main/res/values/strings.xml
+++ b/HelloAndroid/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">HelloAndroid</string>
     <string name="hello">こんにちはアンドロイド</string>
+    <string name="tap_here">ここをタップ</string>
 </resources>
